compiler/tests/en/errors/no_field.salam
// EXPECT: E016
struct P:
    pub x : int = 0
end

func main:
    p := P {}
    __ p.q
end
